--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -836,9 +836,22 @@ a {
   transform: translateY(-16px);
 }
 
-.about-orbit .orbit-ring,
+.about-orbit {
+  min-height: 320px;
+}
+
+.about-orbit .orbit-ring {
+  left: 50%;
+  top: 72%;
+  margin-left: -140px;
+  margin-top: -140px;
+}
+
 .about-orbit .orbit-dot {
-  top: 22px;
+  left: 50%;
+  top: 72%;
+  margin-left: -9px;
+  margin-top: -9px;
 }
 
 .orbit-card {
